--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ style="margin: 0px 10px 0px 0px;">
 <a> Ждём вас в нашем ресторане!
   </a>
   </p>
- <a> Ул.Красноармейская 132
+ <a> Ул.Скляренко 32
 	</a>
    </p>
     </div>
