--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,19 @@
 <head>
+	<!-- Begin Verbox {literal} -->
+<script>
+    (function(){(function c(d,w,m,i) {
+        window.supportAPIMethod = m;
+        var s = d.createElement('script');
+        s.id = 'supportScript'; 
+        var id = '97a573ee18e6896b39a6764512a984c1';
+        s.src = (!i ? 'https://admin.verbox.ru/support/support.js' : 'https://static.site-chat.me/support/support.int.js') + '?h=' + id;
+        s.onerror = i ? undefined : function(){c(d,w,m,true)};
+        w[m] = w[m] || function(){(w[m].q = w[m].q || []).push(arguments);};
+        (d.head || d.body).appendChild(s);
+    })(document,window,'Verbox')})();
+</script>
+<!-- {/literal} End Verbox -->
+	
 <title></title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 
